# libpabod

./: .gitignore  CMakeLists.txt  COPYING.libpabod  FAQ  INSTALL  INSTALL.windows  README.md  README.txt  TODO  config.cmake.in  dox.in  generateDoc.cmake  makefile
data/models/: README.txt  ubf_libpabod.mat
doc/: Doxyfile  quickstart.tex
include/: README.txt  cell.h  crossplatform.h  custom.h  detection.h  dt.h  export.h  fconvThreads.h  featPyramid.h  gdetect.h  getDetections.h  handlerOpenCVStructs.h  image.h  imgdetect.h  makeDetection.h  model.h  modelSort.h  nms.h  pabod.h  readTypes.h
src/: CMakeLists.txt  cell.cpp  dt.cpp  fconvThreads.cpp  featPyramid.cpp  gdetect.cpp  getDetections.cpp  handlerOpenCVStructs.cpp  imgdetect.cpp  makeDetection.cpp  model.cpp  modelSort.cpp  nms.cpp  pabod.cpp  readTypes.cpp
tests/: CMakeLists.txt  detect-vehicle.cpp  detectobj.cpp  detectobj2.cpp  detectvid.cpp  mainTest.cpp
